# rag-template

./: .gitignore  README.md  benchmark_rag.py  logging.conf  main.py  pyproject.toml
src/api/: rag.py  routes.py  upload.py
src/core/: logger.py  rag.py  retrieve.py  settings.py
src/ingestion/: embed_and_upsert.py
src/retrieval/: qdrant_retriever.py
src/utils/: job_with_text.py  timer.py
