[project]
name = "rag-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-qdrant>=1.1.0",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "ragas>=0.4.3",
    "uvicorn>=0.40.0",
]
